name:                hvalue
version:             0.0.2
synopsis:            Implementation of heteregeneous value
description:         Several attempts to implement heterogeneous values in Haskell.
homepage:            http://github.com/mat-tso/HValue
bug-reports:         http://github.com/mat-tso/HValue/issues
license:             MIT
license-file:        LICENSE
tested-with: GHC == 7.8.3
author:              mat tso
maintainer:          mat-tso@topmail.ie
copyright:           (c) 2014, Mat Tso
category:            Data
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

source-repository head
    type: git
    location: git://github.com/mat-tso/HValue.git

library
    exposed-modules:
        Data.HValue.Plain
        Data.HValue.Dynamic
        Data.HValue.Existential
    -- other-modules:

    other-extensions:
        ExistentialQuantification
        GeneralizedNewtypeDeriving
        TypeSynonymInstances
        FlexibleInstances
        ScopedTypeVariables

    build-depends:       base >=4 && <5
    hs-source-dirs:      src
    default-language:    Haskell2010
    ghc-options:         -Wall
